wip index monitor still fails